refactor for apk build

--- a/app/wefeed/package.json
+++ b/app/wefeed/package.json
@@ -24,5 +24,7 @@
     "ionic-plugin-keyboard",
     "cordova-plugin-inappbrowser"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [
+    "android"
+  ]
 }
